syntax = "proto3";
option csharp_namespace = "Streckenbuch.Shared.Types";
package Types;

message GuidProto {
	string value = 1;
}